--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,35 +3,51 @@
 body {
     font-family: sans-serif;
     margin: 0 auto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    background-color: #151515;
+
 }
 * {
     box-sizing: border-box;
 }
 header {
     background: #151515;
-    padding-top: 20px;
 }
+
 .inner {
-    max-width: 1000px;
+    max-width: 1300px;
     margin: 0 auto;
     padding: 0px 20px;
     position: relative;
 }
 .logo{
-    max-width: 140px;
-    margin-top: -20px;
+    max-width: 75px;
 }
 
 h1 {
     text-align: center;
     width: 100%;
     margin-top: 120px;
-    color: #151515;
     font-weight: 800;
     font-size: 40px;
 }
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 26px;
+    padding: 10px 0;
+    border-bottom: 1px white;
+}
+
 nav > ul {
     float: right;
+    list-style-type: none;
+    font-size: 20px;
 }
 nav > ul > li {
     text-align: center;
@@ -50,7 +66,7 @@ nav ul li:hover > ul {
     display: block;
 }
 nav ul li:hover > a {
-    color: grey;
+    color: #d81a24;
 }
 nav > ul > li > a {
     cursor: pointer;
