--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,11 @@ body {
     box-sizing: border-box;
 }
 header {
-    background: #151515;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10%, rgba(0, 0, 0, 0.7)), color-stop(10%, rgba(0, 0, 0, 0)));
+    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0));
+    background-image: -moz- oldlinear-gradient(top, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0));
+    background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0));
 }
 
 .inner {
@@ -186,9 +190,12 @@ input[type=submit]:hover {
 
 
 .container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
     padding: 20px;
+    max-width: 1400px;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
 }
 
 /* error container */
@@ -238,23 +245,24 @@ input[type=submit]:hover {
 /* movies view all */
 
 .movie{
-    border: solid 1px greenyellow;
     display:inline-block;
-    max-width: 30%;
     padding: 1%;
     margin: 1%;
     border-radius: 4px;
+    display: flex;
     
 }
 
 .moviePoster{
     display: inline-block;
     max-width: 100%; 
+    border-radius: 10px;
+    border:3px solid transparent;
 }
 
 .moviePoster:hover{
-    border: solid 1px deepskyblue;
-    border-radius: 4px;
+    border: solid 3px white;
+    cursor: pointer;
 }
 
 /*details view */
@@ -275,5 +283,5 @@ input[type=submit]:hover {
 
 .moviePoster {
     width: auto;
-    height: 500px;
+    height: 300px;
 }
