--- a/views/404.html
+++ b/views/404.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Movie DataBase - Home</title>
     <link rel="stylesheet" type="text/css" href="/public/css/main.css" />
+    <link rel="icon" type="image/x-icon" href="/public/images/favicon.ico" />
 </head>
 
 <body>
@@ -12,7 +13,7 @@
     <header>
         <div class="inner">
             <nav>
-                <a href="/" class="logo"><img class="logo" src="/public/images/nodeLogo.png" alt="nodeLogo"></a>
+                <a href="/" class="logo"><img class="logo" src="/public/images/logo.png" alt="logo"></a>
                 <input type="checkbox" id="nav" /><label for="nav"></label>
                 <ul>
                     <li><a href="/addMovie">Add Movie</a></li>
@@ -22,7 +23,7 @@
         </div>
     </header>
 
-    <h1>{{replaceMe}}</h1>
+    <h1>Sorry, URL not found!</h1>
 </body>
 
 </html>
