--- a/views/viewAll.html
+++ b/views/viewAll.html
@@ -2,8 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Document</title>
+		<title>Movie DataBase - All Movies</title>
 		<link rel="stylesheet" type="text/css" href="/public/css/main.css" />
+		<link rel="icon" type="image/x-icon" href="/public/images/favicon.ico" />
 	</head>
 
 	<body>
@@ -11,7 +12,7 @@
 			<div class="inner">
 				<nav>
 					<a href="/" class="logo"
-						><img class="logo" src="/public/images/nodeLogo.png" alt="nodeLogo"
+						><img class="logo" src="/public/images/logo.png" alt="logo"
 					/></a>
 					<input type="checkbox" id="nav" /><label for="nav"></label>
 					<ul>
