--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,287 +1,315 @@
 /* navbar css */
 
 body {
-    font-family: sans-serif;
-    margin: 0 auto;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: white;
-    background-color: #151515;
-
+	font-family: sans-serif;
+	margin: 0 auto;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	color: white;
+	background: url('/public/images/popcorn-corner.png') right bottom no-repeat,
+		url('/public/images/tickets-corner.png') left bottom no-repeat, #151515;
+	min-height: 100vh;
+	/* background-position: right 80vh;
+	background-repeat: no-repeat;
+	background-attachment: fixed; */
 }
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
+}
+a {
+	color: #d81a24;
 }
 header {
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10%, rgba(0, 0, 0, 0.7)), color-stop(10%, rgba(0, 0, 0, 0)));
-    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0));
-    background-image: -moz- oldlinear-gradient(top, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0));
-    background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0));
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0));
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(10%, rgba(0, 0, 0, 0.7)),
+		color-stop(10%, rgba(0, 0, 0, 0))
+	);
+	background-image: -webkit-linear-gradient(
+		top,
+		rgba(0, 0, 0, 0.7) 10%,
+		rgba(0, 0, 0, 0)
+	);
+	background-image: -moz-
+		oldlinear-gradient(top, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0));
+	background-image: -o-linear-gradient(
+		top,
+		rgba(0, 0, 0, 0.7) 10%,
+		rgba(0, 0, 0, 0)
+	);
+	background-image: linear-gradient(
+		to bottom,
+		rgba(0, 0, 0, 0.7) 10%,
+		rgba(0, 0, 0, 0)
+	);
 }
 
 .inner {
-    max-width: 1300px;
-    margin: 0 auto;
-    padding: 0px 20px;
-    position: relative;
+	max-width: 1300px;
+	margin: 0 auto;
+	padding: 0px 20px;
+	position: relative;
 }
-.logo{
-    max-width: 75px;
+.logo {
+	max-width: 75px;
 }
 
 h1 {
-    text-align: center;
-    width: 100%;
-    margin-top: 120px;
-    font-weight: 800;
-    font-size: 40px;
+	text-align: center;
+	width: 100%;
+	margin-top: 120px;
+	font-weight: 800;
+	font-size: 40px;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 26px;
-    padding: 10px 0;
-    border-bottom: 1px white;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 26px;
+	padding: 10px 0;
+	border-bottom: 1px white;
 }
 
 nav > ul {
-    float: right;
-    list-style-type: none;
-    font-size: 20px;
+	float: right;
+	list-style-type: none;
+	font-size: 20px;
 }
 nav > ul > li {
-    text-align: center;
-    line-height: 40px;
-    margin-left: 70px;
+	text-align: center;
+	line-height: 40px;
+	margin-left: 70px;
 }
 nav > ul li ul li {
-    width: 100%;
-    text-align: left;
+	width: 100%;
+	text-align: left;
 }
 nav ul li:hover {
-    cursor: pointer;
-    position: relative;
+	cursor: pointer;
+	position: relative;
 }
 nav ul li:hover > ul {
-    display: block;
+	display: block;
 }
 nav ul li:hover > a {
-    color: #d81a24;
+	color: #d81a24;
 }
 nav > ul > li > a {
-    cursor: pointer;
-    display: block;
-    outline: none;
-    width: 100%;
-    text-decoration: none;
+	cursor: pointer;
+	display: block;
+	outline: none;
+	width: 100%;
+	text-decoration: none;
 }
 nav > ul > li {
-    float: left;
+	float: left;
 }
 nav a {
-    color: white;
+	color: white;
 }
 nav > ul li ul {
-    display: none;
-    position: absolute;
-    left: 0;
-    top: 100%;
-    width: 100%;
-    z-index: 2000;
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 100%;
+	width: 100%;
+	z-index: 2000;
 }
 nav > ul li ul li > a {
-    text-decoration: none;
+	text-decoration: none;
 }
-[type="checkbox"],
-label {
-    display: none;
-}
-@media screen and (max-width: 768px) {
-    nav ul {
-        display: none;
-    }
-    label {
-        display: block;
-        background: #222;
-        width: 40px;
-        height: 40px;
-        cursor: pointer;
-        position: absolute;
-        right: 20px;
-        top: 0px;
-    }
-    label:after {
-        content: '';
-        display: block;
-        width: 30px;
-        height: 5px;
-        background: #777;
-        margin: 7px 5px;
-        box-shadow: 0px 10px 0px #777, 0px 20px 0px #777
-    }
-    [type="checkbox"]:checked ~ ul {
-        display: block;
-        z-index: 9999;
-        position: absolute;
-        right: 20px;
-        left: 20px;
-    }
-    nav a {
-        color: #777;
-    }
-    nav ul li {
-        display: block;
-        float: none;
-        width: 100%;
-        text-align: left;
-        background: #222;
-        text-indent: 20px;
-    }
-    nav > ul > li {
-        margin-left: 0px;
-    }
-    nav > ul li ul li {
-        display: block;
-        float: none;
-    }
-    nav > ul li ul {
-        display: block;
-        position: relative;
-        width: 100%;
-        z-index: 9999;
-        float: none;
-    }
-    h1 {
-        font-size: 26px;
-    }
-}
-
 
 /* submit form css */
-input[type=text], select, textarea {
-    width: 100%; 
-    padding: 12px; 
-    border: 1px solid #ccc; 
-    border-radius: 4px; 
-    box-sizing: border-box; 
-    margin-top: 6px; 
-    margin-bottom: 16px; 
-    resize: vertical ;
+input[type='text'],
+select,
+textarea {
+	width: 100%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
 }
 
-
-input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+input[type='submit'] {
+	background-color: #4caf50;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
 }
 
-
-input[type=submit]:hover {
-    background-color: #45a049;
+input[type='submit']:hover {
+	background-color: #45a049;
 }
-
+input[type='checkbox'] {
+	display: none;
+}
 
 .container {
-    padding: 20px;
-    max-width: 1400px;
-    margin: 0 auto;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
+	padding: 20px;
+	max-width: 900px;
+	margin: 0 auto;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-evenly;
 }
 
 /* error container */
 
-#replaceMe{
-    font-size:0px;
-    line-height:0;
-    margin:0;
-    padding:0;
-    height:0;
+#replaceMe {
+	font-size: 0px;
+	line-height: 0;
+	margin: 0;
+	padding: 0;
+	height: 0;
 }
 
 /* error message */
-#errBox{
-    min-width: 100%;
-    text-align: center;
-    background-color: pink;
-    border-radius: 4px;
-    padding-top:5px;
-    padding-bot:5px;
+#errBox {
+	min-width: 100%;
+	text-align: center;
+	background-color: pink;
+	border-radius: 4px;
+	padding-top: 5px;
+	padding-bot: 5px;
 }
 
-#errMsg{
-    display: inline-block;
-    color: orange;
-    font-size: 25px;
+#errMsg {
+	display: inline-block;
+	color: orange;
+	font-size: 25px;
 }
 
 /* succsses message */
 
-#succssesBox{
-   min-width: 100%;
-    text-align: center;
-    background-color: green;
-    border-radius: 4px;
-    padding-top:5px;
-    padding-bot:5px;
-    
+#succssesBox {
+	min-width: 100%;
+	text-align: center;
+	background-color: green;
+	border-radius: 4px;
+	padding-top: 5px;
+	padding-bot: 5px;
 }
 
-#succssesMsg{
-    display: inline-block;
-    color: orange;
-    font-size: 25px
+#succssesMsg {
+	display: inline-block;
+	color: orange;
+	font-size: 25px;
 }
 
 /* movies view all */
 
-.movie{
-    display:inline-block;
-    padding: 1%;
-    margin: 1%;
-    border-radius: 4px;
-    display: flex;
-    
+.movie {
+	display: inline-block;
+	padding: 1%;
+	margin: 1%;
+	border-radius: 4px;
+	display: flex;
 }
 
-.moviePoster{
-    display: inline-block;
-    max-width: 100%; 
-    border-radius: 10px;
-    border:3px solid transparent;
+.moviePoster {
+	display: inline-block;
+	max-width: 100%;
+	border-radius: 10px;
+	border: 3px solid transparent;
 }
 
-.moviePoster:hover{
-    border: solid 3px white;
-    cursor: pointer;
+.moviePoster:hover {
+	border: solid 3px white;
+	cursor: pointer;
 }
 
 /*details view */
 
 .content {
-    width: 100%;
-    border-radius: 4px;
-    border: 2px solid greenyellow;
-    padding: 20px;
-    overflow: hidden;
-   
+	max-width: 40vh;
+	margin: 0 auto;
+	padding: 15px 25px;
+	overflow: hidden;
+	background-color: #151515;
+	/* border: 2px solid white; */
+	border-radius: 20px;
+	/* box-shadow: 0px 0px 9px 2px white; */
+}
+.content:hover {
+	/* box-shadow: 0px 0px 9px 2px #d81a24; */
 }
 
 .content img {
-    margin-right: 15px;
-    float: left;
+	border-radius: 10px;
+	display: block;
+	width: 100%;
 }
 
 .moviePoster {
-    width: auto;
-    height: 300px;
+	width: auto;
+	max-height: 300px;
+}
+
+@media screen and (max-width: 768px) {
+	nav ul {
+		display: none;
+	}
+	nav label {
+		display: block;
+		background: #222;
+		width: 40px;
+		height: 40px;
+		cursor: pointer;
+		position: absolute;
+		right: 20px;
+		top: 0px;
+	}
+	nav label:after {
+		content: '';
+		display: block;
+		width: 30px;
+		height: 5px;
+		background: #777;
+		margin: 7px 5px;
+		box-shadow: 0px 10px 0px #777, 0px 20px 0px #777;
+	}
+	[type='checkbox']:checked ~ ul {
+		display: block;
+		z-index: 9999;
+		position: absolute;
+		right: 20px;
+		left: 20px;
+	}
+	nav a {
+		color: #777;
+	}
+	nav ul li {
+		display: block;
+		float: none;
+		width: 100%;
+		text-align: left;
+		background: #222;
+		text-indent: 20px;
+	}
+	nav > ul > li {
+		margin-left: 0px;
+	}
+	nav > ul li ul li {
+		display: block;
+		float: none;
+	}
+	nav > ul li ul {
+		display: block;
+		position: relative;
+		width: 100%;
+		z-index: 9999;
+		float: none;
+	}
+	h1 {
+		font-size: 26px;
+	}
 }
