--- a/views/home.html
+++ b/views/home.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<title>Movie DataBase - Home</title>
+		<link rel="stylesheet" type="text/css" href="/public/css/main.css" />
+		<link rel="icon" type="image/x-icon" href="/public/images/favicon.ico" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/public/css/main.css" />
-</head>
+	<body>
+		<header>
+			<div class="inner">
+				<nav>
+					<a href="/" class="logo"
+						><img class="logo" src="/public/images/logo.png" alt="logo"
+					/></a>
+					<input type="checkbox" id="nav" /><label for="nav"></label>
+					<ul>
+						<li><a href="/addMovie">Add Movie</a></li>
+						<li><a href="/viewAllMovies">View All Movies</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
 
-<body>
-
-    <header>
-        <div class="inner">
-            <nav>
-                <a href="/" class="logo"><img class="logo" src="/public/images/nodeLogo.png" alt="nodeLogo"></a>
-                <ul>
-                    <li><a href="/addMovie">Add Movie</a></li>
-                    <li><a href="/viewAllMovies">View All Movies</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <h1>Hello I'm your Node Movie DB app!</h1>
-</body>
-
+		<h1>Hello, I'm your Movie DataBase application!</h1>
+	</body>
 </html>
